deploy/cromwell/kubernetes/job-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jm-service
spec:
  type: NodePort
  selector:
    app: job-manager
  ports:
  - name: jm-ui
    protocol: TCP
    port: 80
    targetPort: 80
